# medallion_pipeline_local

./: .gitignore  README.m  README.md  pyproject.toml
data/bronze/: Base Devoluções.parquet  Base Vendas - 2020.parquet  Base Vendas - 2021.parquet  Base Vendas - 2022.parquet  Cadastro Clientes.parquet  Cadastro Localidades.parquet  Cadastro Lojas.parquet  Cadastro Produtos.parquet
data/gold/: devolucoes_por_motivo.parquet  fato_vendas.parquet  vendas_por_loja.parquet  vendas_por_periodo.parquet
data/silver/: clientes.parquet  devolucoes.parquet  localidades.parquet  lojas.parquet  produtos.parquet  vendas.parquet
jupyter/: read_bronze.ipynb  read_gold.ipynb  read_silver.ipynb
src/local_medallion_pipeline/: main.py
src/local_medallion_pipeline/extract/: bronze.py  gold.py  raw_to_bronze.py  silver.py
tests/: test_bronze.py  test_gold.py  test_raw_to_bronze.py  test_silver.py
