[project]
name = "local-medallion-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo-Kimura-Data",email = "marcelo.kimura.data@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "local_medallion_pipeline", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
