[project]
name = "local-medallion-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo-Kimura-Data",email = "marcelo.kimura.data@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "local_medallion_pipeline", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "nbconvert (>=7.0.0)",
    "ipykernel (>=6.0.0)"
]

[tool.taskipy.tasks]
lint = "ruff check --select I . && ruff format . --check"
format = "ruff format . && ruff check --select I --fix ."

[project.scripts]
run-pipeline = "local_medallion_pipeline.main:main"






